# TimeCapsule

./: BOM.csv  JOURNAL.md  README.md
BOM/: BOM.csv
Build Files/Gerber/: TimeCapsule-B_Cu.gbr  TimeCapsule-B_Mask.gbr  TimeCapsule-B_Paste.gbr  TimeCapsule-B_Silkscreen.gbr  TimeCapsule-Edge_Cuts.gbr  TimeCapsule-F_Cu.gbr  TimeCapsule-F_Mask.gbr  TimeCapsule-F_Paste.gbr  TimeCapsule-F_Silkscreen.gbr  TimeCapsule-NPTH.drl  TimeCapsule-PTH.drl  TimeCapsule-job.gbrjob
Code/: CMakeLists.txt  fs_manager.c  fs_manager.h  main.c
Code/fatfs/: diskio.h  ff.c
Code/rv2038/: rv3028.c  rv3028.h
TimeCapsulePCB/: TimeCapsule.csv  TimeCapsule.kicad_pcb  TimeCapsule.kicad_prl  TimeCapsule.kicad_pro  TimeCapsule.kicad_sch  TimeCapsule.kicad_sch-bak  TimeCapsule.step  _autosave-TimeCapsule.kicad_prl  _autosave-crystal.kicad_sch  _autosave-flash.kicad_sch  power.kicad_sch  sym-lib-table
